--- a/src/app/product-list/product-list.html
+++ b/src/app/product-list/product-list.html
@@ -5,6 +5,7 @@
   <app-product-item 
     *ngFor="let product of products"
     [product]="product"
-    (addToCartEvent)="onAddToCart($event)">
+    (addToCartEvent)="onAddToCart($event)"
+    (selectProductEvent)="onSelectProduct($event)">
   </app-product-item>
 </div>
